--- a/package.json
+++ b/package.json
@@ -24,18 +24,21 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "styled-jsx": "^2.2.7"
+    "styled-jsx": "^2.2.7",
+    "webpack-css-loaders": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
     "eslint": "^4.13.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-react": "^7.5.1",
     "html-webpack-plugin": "^2.29.0",
     "react-hot-loader": "^3.0.0-beta.7",
+    "style-loader": "^0.21.0",
     "webpack": "^3.4.0",
     "webpack-dev-server": "^2.5.0"
   }
